b=379430, print preview hangs X, r+sr=roc,a=schrep